--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "typescript": "^3.7.3"
+    "typescript": "^3.8.0-dev.20191210"
   }
 }
